--- a/compose.yml
+++ b/compose.yml
@@ -5,6 +5,15 @@ services:
     ports:
       - ${UI_PORT:-8080}:8080
     volumes:
-      - ./openapi:/openapi
+      - ./gen:/openapi
     environment:
       API_URL: openapi/openapi.yml
+
+  merger:
+    build:
+      context: ./docker/merger
+    volumes:
+      - ./src:/app/src
+      - ./gen:/openapi
+    command: >
+      npm run watch
