add auth and requestBody

--- a/src/paths/v1/users/signup.yml
+++ b/src/paths/v1/users/signup.yml
@@ -1,4 +1,14 @@
 post:
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            password:
+              type: string
+              example: X5j13$#eCM1cG@Kdc
   responses:
     '200':
       content:
