--- a/src/paths/v1/users/auth.yml
+++ b/src/paths/v1/users/auth.yml
@@ -1,4 +1,17 @@
 post:
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            id:
+              type: string
+              example: 550e8400-e29b-41d4-a716-446655440000
+            password:
+              type: string
+              example: X5j13$#eCM1cG@Kdc
   responses:
     '200':
       content:
