--- a/src/paths/v1/users/me.yml
+++ b/src/paths/v1/users/me.yml
@@ -1,4 +1,6 @@
 get:
+  security:
+    - bearerAuth: []
   responses:
     '200':
       content:
@@ -9,3 +11,5 @@ get:
               id:
                 type: string
                 example: 550e8400-e29b-41d4-a716-446655440000
+    '401':
+      $ref: '#/components/responses/UnauthorizedError'
