--- a/src/paths/v1/users/me.yml
+++ b/src/paths/v1/users/me.yml
@@ -9,7 +9,6 @@ get:
             type: object
             properties:
               id:
-                type: string
-                example: 550e8400-e29b-41d4-a716-446655440000
+                $ref: '#/components/schemas/uuid'
     '401':
       $ref: '#/components/responses/UnauthorizedError'
