--- a/src/v2.yml
+++ b/src/v2.yml
@@ -4,23 +4,17 @@ info:
   description: >-
     Optional multiline or single-line description in
     [CommonMark](http://commonmark.org/help/) or HTML.
-  version: 0.1.9
+  version: 2.0.0
 
 servers:
-  - url: http://api.example.com/v1
+  - url: http://api.example.com
     description: Optional server description, e.g. Main (production) server
   - url: http://staging-api.example.com
     description: Optional server description, e.g. Internal staging server for testing
 
 paths:
-  /v1/users/signup:
+  /v2/users/signup:
     $ref: ./paths/v1/users/signup.yml
-  /v1/users/auth:
-    $ref: ./paths/v1/users/auth.yml
-  /v1/users/me:
-    $ref: ./paths/v1/users/me.yml
-  /v1/users/refresh:
-    $ref: ./paths/v1/users/refresh.yml
 
 components:  
   securitySchemes:
