--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ services:
       context: ./docker/cli
     volumes:
       - ./gen:/openapi
-      - ./docker/cli/app:/app
+      - .:/app
 
   ui:
     build:
@@ -20,8 +20,7 @@ services:
     build:
       context: ./docker/cli
     volumes:
-      - ./docker/cli/app:/app
-      - ./src:/app/src
+      - .:/app
       - ./gen:/openapi
     command: >
       ash -c '
