change dir struct on cli

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "lint:v1": "redocly lint /openapi/v1.yml",
-    "lint:v2": "redocly lint /openapi/v2.yml",
-    "merge:v1": "swagger-merger -i src/v1.yml -o /openapi/v1.yml",
-    "merge:v2": "swagger-merger -i src/v2.yml -o /openapi/v2.yml",
+    "lint:v1": "redocly lint gen/v1.yml",
+    "lint:v2": "redocly lint gen/v2.yml",
+    "merge:v1": "swagger-merger -i src/v1.yml -o gen/v1.yml",
+    "merge:v2": "swagger-merger -i src/v2.yml -o gen/v2.yml",
     "merge": "run-p merge:v1 merge:v2",
     "watch": "npm-watch"
   },
