--- a/src/paths/v1/users/auth.yml
+++ b/src/paths/v1/users/auth.yml
@@ -1,4 +1,6 @@
 post:
+  summary: Authenticate user.
+  security: []
   requestBody:
     required: true
     content:
@@ -11,7 +13,8 @@ post:
             password:
               $ref: '#/components/schemas/password'
   responses:
-    '200':
+    200:
+      description: Success
       content:
         application/json:
           schema:
@@ -21,3 +24,5 @@ post:
                 $ref: '#/components/schemas/uuid'
               token:
                 $ref: '#/components/schemas/token'
+    401:
+      $ref: '#/components/responses/UnauthorizedError'
