--- a/src/paths/v1/users/me.yml
+++ b/src/paths/v1/users/me.yml
@@ -1,8 +1,10 @@
 get:
+  summary: Get logged users information.
   security:
     - bearerAuth: []
   responses:
-    '200':
+    200:
+      description: Success
       content:
         application/json:
           schema:
@@ -10,5 +12,5 @@ get:
             properties:
               id:
                 $ref: '#/components/schemas/uuid'
-    '401':
+    401:
       $ref: '#/components/responses/UnauthorizedError'
