--- a/src/paths/v1/users/refresh.yml
+++ b/src/paths/v1/users/refresh.yml
@@ -1,8 +1,10 @@
 get:
+  summary: Refresh access token.
   security:
     - bearerAuth: []
   responses:
-    '200':
+    200:
+      description: Success
       content:
         application/json:
           schema:
@@ -12,5 +14,5 @@ get:
                 $ref: '#/components/schemas/uuid'
               token:
                 $ref: '#/components/schemas/token'
-    '401':
+    401:
       $ref: '#/components/responses/UnauthorizedError'
