--- a/src/paths/v1/users/signup.yml
+++ b/src/paths/v1/users/signup.yml
@@ -1,4 +1,6 @@
 post:
+  summary: Signup user.
+  security: []
   requestBody:
     required: true
     content:
@@ -9,7 +11,8 @@ post:
             password:
               $ref: '#/components/schemas/password'
   responses:
-    '200':
+    200:
+      description: Success
       content:
         application/json:
           schema:
