--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,15 +12,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Install and cache nodejs
         uses: actions/setup-node@v3
         with:
           node-version-file: package.json
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
+
       - name: Install packages
         run: npm ci
+
+      - name: Lint file format
+        run: npm run lint:fmt
+
       - name: Merge
         run: npm run merge:v1
-      - name: Lint
+
+      - name: Lint OpenAPI
         run: npm run lint:v1
