--- a/src/paths/v1/users/refresh.yml
+++ b/src/paths/v1/users/refresh.yml
@@ -11,8 +11,8 @@ get:
             type: object
             properties:
               id:
-                $ref: '#/components/schemas/uuid'
+                $ref: "#/components/schemas/uuid"
               token:
-                $ref: '#/components/schemas/token'
+                $ref: "#/components/schemas/token"
     401:
-      $ref: '#/components/responses/UnauthorizedError'
+      $ref: "#/components/responses/UnauthorizedError"
