--- a/src/paths/v1/users/signup.yml
+++ b/src/paths/v1/users/signup.yml
@@ -9,7 +9,7 @@ post:
           type: object
           properties:
             password:
-              $ref: '#/components/schemas/password'
+              $ref: "#/components/schemas/password"
   responses:
     200:
       description: Success
@@ -19,6 +19,6 @@ post:
             type: object
             properties:
               id:
-                $ref: '#/components/schemas/uuid'
+                $ref: "#/components/schemas/uuid"
               token:
-                $ref: '#/components/schemas/token'
+                $ref: "#/components/schemas/token"
