--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Build docs
       run: npm run build-docs:v1
 
+    - name: Copy docs
+      run: npm run copy-docs:v1
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
