--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,10 @@
 name: Publish Docs
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+    types: [closed]
 
 permissions:
   actions: write
@@ -36,10 +39,10 @@ jobs:
       run: npm run build-docs:v1
 
     - name: Copy docs
-      run: npm run copy-docs:v1
+      run: cp gen/v1.html docs/
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs
+        publish_dir: docs
