--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,7 @@
 name: Publish Docs
 
 on:
+  workflow_dispatch:
   pull_request:
     branches:
       - main
@@ -12,7 +13,7 @@ permissions:
   contents: write
 
 jobs:
-  publish:
+  build:
     name: Publish Docs
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +26,7 @@ jobs:
         node-version-file: package.json
         cache: 'npm'
         cache-dependency-path: '**/package-lock.json'
-    
+  
     - name: Install packages
       run: npm ci
 
@@ -42,7 +43,20 @@ jobs:
       run: cp gen/v1.html docs/
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: actions/upload-pages-artifact@v1
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: docs
+        path: docs
+
+  deploy:
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
