--- a/redocly/v1.yml
+++ b/redocly/v1.yml
@@ -22,3 +22,17 @@ rules:
       pattern: /^[a-z0-9\-\/\{\}]+$/
     message: should use kebab-case
     severity: error
+
+  rule/require-camel-case-query-parameters:
+    subject:
+      type: Parameter
+      property: name
+    where:
+      - subject:
+          type: Parameter
+          property: in
+        assertions:
+          const: query
+    assertions:
+      casing: camelCase
+    severity: error
