fixed operation id

--- a/src/paths/v1/users/me.yml
+++ b/src/paths/v1/users/me.yml
@@ -1,5 +1,5 @@
 get:
-  operationId: v1UsersMe
+  operationId: get-v1-users-me
   summary: Get logged users information.
   security:
     - bearerAuth: []
