--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     }
   },
   "devDependencies": {
-    "@redocly/cli": "1.16.0",
+    "@redocly/cli": "^1.34.1",
     "npm-run-all2": "6.1.2",
     "npm-watch": "0.12.0",
     "prettier": "3.2.5",
